--- a/style.css
+++ b/style.css
@@ -66,6 +66,15 @@ body {
         left: 130%;
     }
 }
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 /*--Login Text--*/
 .login-div h2 {
     margin: 0 0 30px;
@@ -119,21 +128,23 @@ body {
     font-size: 24px;
 }
 /*--Submit Container--*/
-.login-div form a {
+.login-div .div-submit input {
     position: relative;
     display: inline-block;
-    padding: 10px 135px;
+    padding: 10px 122px;
     color: #af4eff;
-    font-size: 26px;
+    font-size: 25px;
     text-decoration: none;
     text-transform: uppercase;
     overflow: hidden;
     transition: .5s;
-    margin-top: 20px;
+    margin-top: 0;
+    margin-bottom: 10px;
     letter-spacing: 4px;
     border: 4px double;
+    background: transparent;
 }
-.login-div a:hover {
+.login-div .div-submit input:hover {
     background: #af4eff;
     color: #fff;
     font-weight: bolder;
@@ -141,14 +152,6 @@ body {
     box-shadow: 0 0 5px #af4eff,
                 0 0 25px #af4eff,
                 0 0 50px #af4eff;
-}
-.login-div a span {
-    position: absolute;
-    display: block;
-}
-.login-div p span {
-    position: absolute;
-    display: block;
 }
 .div-submit{
     margin: 0;
@@ -179,122 +182,30 @@ body {
                 0 0 25px #af4eff,
                 0 0 50px #af4eff;
 }
-
-/* --Linear effect around-- */
-
-.login-div a span:nth-child(1) {
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(90deg, transparent, #af4eff);
-    animation: btn-anim1 1s linear infinite;
+.btn-login {
+    visibility: hidden;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    display: inline-block;
+    padding: 5px 10px;
+    color: #af4eff;
+    font-size: 26px;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    letter-spacing: 2px;
+    border: 4px double;
 }
-@keyframes btn-anim1 {
-    0% {
-      left: -100%;
-    }
-    50%,100% {
-      left: 100%;
-    }
-  }
-  
-.login-div a span:nth-child(2) {
-    top: -100%;
-    right: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(180deg, transparent, #af4eff);
-    animation: btn-anim2 1s linear infinite;
-    animation-delay: .25s;
-}
-  
-@keyframes btn-anim2 {
-    0% {
-      top: -100%;
-    }
-    50%,100% {
-      top: 100%;
-    }
-}
-  
-.login-div a span:nth-child(3) {
-    bottom: 0;
-    right: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(270deg, transparent, #af4eff);
-    animation: btn-anim3 1s linear infinite;
-    animation-delay: .5s;
-}
-  
-@keyframes btn-anim3 {
-    0% {
-      right: -100%;
-    }
-    50%,100% {
-      right: 100%;
-    }
-}
-  
-.login-div a span:nth-child(4) {
-    bottom: -100%;
-    left: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(360deg, transparent, #af4eff);
-    animation: btn-anim4 1s linear infinite;
-    animation-delay: .75s
-}
-  
-@keyframes btn-anim4 {
-    0% {
-      bottom: -100%;
-    }
-    50%,100% {
-      bottom: 100%;
-    }
-}
-
-/* --Continue as guest linear effect--*/
-
-.login-div p span:nth-child(1) {
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(90deg, transparent, #af4eff);
-    animation: btn-anim1 1s linear infinite;
-}
- 
-.login-div p span:nth-child(2) {
-    top: -100%;
-    right: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(180deg, transparent, #af4eff);
-    animation: btn-anim2 1s linear infinite;
-    animation-delay: .25s;
-}
-    
-.login-div p span:nth-child(3) {
-    bottom: 0;
-    right: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(270deg, transparent, #af4eff);
-    animation: btn-anim3 1s linear infinite;
-    animation-delay: .5s;
-}
-   
-.login-div p span:nth-child(4) {
-    bottom: -100%;
-    left: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(360deg, transparent, #af4eff);
-    animation: btn-anim4 1s linear infinite;
-    animation-delay: .75s
+.btn-login:hover {
+    background: #af4eff;
+    color: #fff;
+    font-weight: bolder;
+    border-radius: 2px;
+    box-shadow: 0 0 5px #af4eff,
+                0 0 25px #af4eff,
+                0 0 40px #af4eff;
 }
 /*--Mobile phone version landscape--*/
 
@@ -307,10 +218,86 @@ body {
 
 @media all and (min-device-width: 440px) and (max-device-height: 802px) and (orientation:portrait)
 {
-
-    #divName
-    {
-        margin-left: 25%;
-        float: left;
+    .login-div {
+        width: 350px;
+        transition: .3s;
+        top: 50%;
+        left: 50%;
+        position: absolute;
+        visibility: hidden;
+        animation-name: fadeIn, sizeUp;
+        animation-fill-mode: forwards;
+        animation-duration: 2s;
+        box-shadow: -15px 15px 7px rgba(0,0,0,.5);
     }
-}
+    @keyframes sizeUp{
+        from {
+            transform: scale(0) translate(-50%, -50%);
+        }
+        to {
+            transform: scale(1) translate(-50%, -50%);
+        }
+    }
+    .btn-login {
+        visibility: visible;
+        background: transparent;
+    }
+    .logo-n {
+        font-size: 18px;
+        width: 30%;
+        margin: 0;
+    }
+    .logo-y {
+        font-size: 18px;
+        width: 30%;
+        margin: 0;
+        right: 0;
+    }
+    .login-div h2 {
+        font-size: 35px;
+    }
+    .login-div h3 {
+        font-size: 16px;
+    }
+    .login-div .input-div input {
+        font-size: 16px;
+    }
+    .login-div .input-div label {
+        font-size: 20px;
+    }
+    .login-div .input-div input:focus ~ label , 
+    .login-div .input-div input:valid ~ label {
+        top: -26px;
+        font-size: 16px;
+    }
+    .login-div .div-submit input {
+        padding: 7px 83.5px;
+        font-size: 20px;
+        transition: .5s;
+        margin-top: 5px;
+        letter-spacing: 3px;
+    }
+    .login-div .div-submit input:hover {
+        background: #af4eff;
+        color: #fff;
+        font-weight: bolder;
+        border-radius: 2px;
+        box-shadow: 0 0 5px #af4eff,
+                    0 0 20px #af4eff,
+                    0 0 30px #af4eff;
+    }
+    .guest {
+        width: 173px;
+        padding: 4px 43.5px;
+        font-size: 14px;
+    }
+    .guest:hover {
+        background: #af4eff;
+        color: #fff;
+        font-weight: bolder;
+        border-radius: 2px;
+        box-shadow: 0 0 5px #af4eff,
+                    0 0 20px #af4eff,
+                    0 0 30px #af4eff;
+    }
+}   
